# GameEngine

./: .gitignore  pyproject.toml  run_game_engine.py
data/: images.yml  levels.yml  objects.yml
gameengine/: AssetManager.py  Game.py  GameObject.py  ImageComponent.py  InputHandler.py  Level.py  PlayerObject.py  __init__.py  behaviorcomponent.py  bounce_box_behavior.py  bounce_box_behavior2.py  collisioncomponent.py
gameengine/behaviors/: bounce_box_behavior.py  player_behavior.py
tests/: test_gameengine.py
